# icloudpd-rs

./: .dockerignore  .gitignore  CHANGELOG.md  CHANGES.md  Cargo.toml  Dockerfile  LICENSE  LICENSE.md  README.md  REVIEW.md  SECURITY.md  TODO.md  audit.toml  clippy.toml  docker-compose.yml  justfile  typos.toml
.cargo/: audit.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  docker.yml  release.yml  retag-v0.12.2.yml
docs/: README.md  migration-from-python.md  synctoken-sys-diag.md  v0.13-migration.md
docs/cli/: album.md  auth-only.md  cookie-directory.md  directory.md  domain.md  dry-run.md  folder-structure.md  list-albums.md  list-libraries.md  live-photo-mov-filename-policy.md  live-photo-size.md  log-level.md  max-retries.md  password.md  recent.md  retry-delay.md  set-exif-datetime.md  size.md  skip-created-after.md  skip-created-before.md  skip-live-photos.md  skip-photos.md  skip-videos.md  threads-num.md  username.md  watch-with-interval.md
docs/features/: authentication.md  content-filtering.md  download-pipeline.md  exif.md  folder-structure.md  live-photos.md  retry.md  watch-mode.md
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: cloudkit_json.rs  enc_decoders.rs  heif_atoms.rs  heif_xmp_probe.rs  paths_sanitization.rs
scripts/: check-roundtrip-gate.sh
src/: cli.rs  config.rs  credential.rs  fs_util.rs  health.rs  lib.rs  main.rs  metrics.rs  migration.rs  notifications.rs  password.rs  report.rs  retry.rs  selection.rs  setup.rs  shutdown.rs  sync_loop.rs  systemd.rs  types.rs
src/auth/: endpoints.rs  error.rs  mod.rs  responses.rs  session.rs  srp.rs  twofa.rs
src/commands/: import.rs  mod.rs  reconcile.rs  service.rs  status.rs
src/commands/import/wiremock_tests/: icloudpd_compat.rs
src/download/: error.rs  exif.rs  file.rs  filter.rs  heif.rs  metadata.rs  mod.rs  paths.rs  pipeline.rs
src/icloud/: error.rs  mod.rs  photos.rs
src/icloud/photos/: album.rs  asset.rs  cloudkit.rs  decode.rs  enc.rs  library.rs  mod.rs  queries.rs  session.rs  smart_folders.rs  types.rs
src/state/: db.rs  error.rs  mod.rs  schema.rs  types.rs
tests/: README.md  TESTS.md  behavioral.rs  cli.rs  import_existing_live.rs  lib.sh  run-all-tests.sh  run-docker-live.sh  setup_auth.rs  state_auth.rs  sync.rs
tests/common/: mod.rs
tests/shell/: concurrency.sh  docker.sh  lib.sh  state-machine.sh
